--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>GOMES_Movie</title>
+    <title>GOMESMovie</title>
   </head>
   <body>
     <noscript>Você precisa habilitar o java script para este app</noscript>
